fixed bug: profile view improved design & bio wrap

--- a/src/front/styles/profile.scss
+++ b/src/front/styles/profile.scss
@@ -16,10 +16,8 @@
     margin: 1.25rem auto;
     
 }
-.profile-button{
-    font-size: 2.5rem;
-    color: $secondary-color;
-    margin-left: 1rem;
+.bio{
+    word-wrap: break-word;
 }
 .body{
     width: 85%;
